...
    }
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        backButton.accessibilityIdentifier = "BackButton"
        scrollView.delegate = self
        backButton.tintColor = .white
        scrollView.minimumZoomScale = 0.95
        scrollView.maximumZoomScale = 3
        updateFullImage(id: photo?.id ?? "")
    }
...
